# muse_framework

./: .coderabbit.yaml  CMakeLists.txt  ninja_build.sh  ninja_build_utests.sh
.github/workflows/: check_codestyle.yml  check_unit_tests.yml
buildscripts/ci/linux/: build_utest.sh  runutests.sh  setup.sh
framework/accessibility/: CMakeLists.txt
framework/accessibility/internal/: accessiblewindowinterface.cpp
framework/cloud/qml/Muse/Cloud/: CMakeLists.txt
framework/cmake/: MuseSetupConfiguration.cmake
framework/languages/tests/: languagesjson_tests.cpp
framework/stubs/cloud/qml/Muse/Cloud/: CMakeLists.txt
framework/ui/internal/: guiapplication.cpp
framework/update/internal/: updateconfiguration.cpp
